# LoadForecasting

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  research.ipynb
models/: xgb_model.pkl
research/: README.md
src/: api.py  app.py  capacity.py  forecast.py  utils.py
src/loadforecasting.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
