[project]
name = "loadforecasting"
version = "0.1.0"
description = "Load Foreceastin Data Analytics app"
requires-python = ">=3.12"
dependencies = [
    "altair>=4.0.0,<5.0.0",
    "joblib>=1.5.3",
    "numpy>=2.4.2",
    "pandas>=1.4.0,<3.0.0",
    "streamlit>=1.19.0,<1.28.0",
    "xgboost>=2.0.0",
]
